mobile calendar: fix datepicker icon overlapping mobileCalendarItemDetails

--- a/client/app/calendar/mobileCalendar.styl
+++ b/client/app/calendar/mobileCalendar.styl
@@ -57,7 +57,7 @@
 div.swipebar
 	absolute: top left bottom
 	width: 7%
-	z-index: 9
+	z-index: 8
 
 body.snapjs-left div.swipebar,
 body.snapjs-right div.swipebar {
@@ -98,7 +98,7 @@ div.mobileCalendarTopBar
 
 	.fa-calendar
 		absolute: top 10px right 10px
-		z-index: 10
+		z-index: 9
 
 div.mobileCalendar
 	absolute: left 0 right 0 bottom 0 top 50px
